--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Hira Trading Corporation</title>
 	<link rel="stylesheet" href="style.css">
+	<H1>Hira Trading Corporation</h1>
 </head>
 <body>
 	<a href="HTC.apk" download="Apk">
