--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Hira Trading Corporation</title>
 	<link rel="stylesheet" href="style.css">
-	<H1>Hira Trading Corporation</h1>
+	
 </head>
 <body>
+	<img src="HTC.png" alt="Girl in a jacket" width="500" height="600">
+	<H1>Hira Trading Corporation</h1>
 	<a href="HTC.apk" download="Apk">
 		Download
 	</a>
