--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<img src="HTC.png" alt="Girl in a jacket" width="500" height="600">
+	<img src="HTC logo.png" alt="Girl in a jacket" width="500" height="600">
 	<H1>Hira Trading Corporation</h1>
 	<a href="HTC.apk" download="Apk">
 		Download
