--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<img src="HTC logo.png" >
+	<img src="HTC logo.png" width="250" height="250" >
 	<H1>Hira Trading Corporation</h1>
 	<a href="HTC.apk" download="Apk">
 		Download
